[gd_scene load_steps=2 format=3 uid="uid://dmw3s1x17ou48"]

[ext_resource type="Script" path="res://scripts/glugluglu/end_screen.gd" id="1_5g5xo"]

[node name="End Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5g5xo")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(400, 60)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -268.0
offset_top = 120.0
offset_right = 268.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center] ¡Partida Terminada! [\\center]"
scroll_active = false

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.5
offset_top = -215.0
offset_right = 352.5
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 70
columns = 3

[node name="PecesLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Peces Devorados"

[node name="PecesNumero" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.219608, 0.521569, 0.929412, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.462745, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_font_sizes/font_size = 35
horizontal_alignment = 2

[node name="PecesPoints" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
horizontal_alignment = 2

[node name="NivelLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Nivel"

[node name="NivelNumero" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.219608, 0.521569, 0.929412, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.462745, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_font_sizes/font_size = 35
horizontal_alignment = 2

[node name="NivelPoints" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
horizontal_alignment = 2

[node name="VictoriaLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Victoria"

[node name="VictoriaPlaceholder" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="VictoriaPoints" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
horizontal_alignment = 2

[node name="FinalLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Puntuación Final"

[node name="Placeholder" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
horizontal_alignment = 2

[node name="FinalPoints" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.968627, 0.890196, 0, 1)
theme_override_colors/font_shadow_color = Color(0.380392, 0.321569, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_font_sizes/font_size = 45
horizontal_alignment = 2

[node name="BackToMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -176.0
offset_right = 296.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Volver al Menú Principal"

[connection signal="pressed" from="BackToMenu" to="." method="_on_back_to_menu_pressed"]
